# lcs-diff-tool

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: lcs_algorithm.py  main.py
src/: lcs_algorithm.py
